# rockchip_vaapi_driver

./: .gitignore  CMakeLists.txt  README.md  deploy.sh
docs/: gecko_compatibility_report.md
src/: driver.cpp  mpp_common.hpp  mpp_decoder.cpp  mpp_decoder.h
src/util/: atomic_sync_queue.h  bitstream.hpp  log.cpp  log.h
tools/: firefox_headless_video_test.html  firefox_hwdecode_user.js  firefox_playback_benchmark.py  firefox_playback_server.py  gecko_vaapi_probe.cpp  measure_firefox_playback.py  open_firefox_hwdecode.sh  panthor_egl_import_test.cpp  rockchip-firefox-hwdecode.desktop  run_firefox_vaapi_probe.sh  test_mpp_decode.cpp  vaapi_decode_test.cpp
